force-app/main/default/objects/Air_Lines_1__c/Air_Lines_1__c.object-meta.xml
<CustomObject>
    <label>Air Lines 1</label>
    <nameField>
        <label>Air Lines 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Air Lines 1</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>