force-app/main/default/objects/Air_Lines_1__c/fields/Day_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Day_Since_Created__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Since Created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>