force-app/main/default/objects/Air_Lines_1__c/fields/Revenue_of_Air_Lines__c.field-meta.xml
<CustomField>
    <fullName>Revenue_of_Air_Lines__c</fullName>
    <label>Revenue of Air Lines Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>