force-app/main/default/objects/Air_Lines_1__c/fields/Yearly_Revnue__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Revnue__c</fullName>
    <formula>Revenue_of_Air_Lines__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Revnue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>