force-app/main/default/objects/Air_Lines_1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rating__c</columns>
    <columns>Day_Since_Created__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>